--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,18 @@
+Bin/ant
+gpcp-JVM
+Rose
+Samurai
+Sdl
+Sym/Sdl.osf
+*.dll
 *.asm
 *.bin
-*.c
-*.h
 *.ihx
 *.lk
 *.lst
 *.map
 *.noi
 *.rel
-*.sym
-*.trd
+Sdl/.git
+Sdl/+Git.bat
 +Git.bat
