--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,14 @@
-Games
-gpcp-JVM
-Ofront/Arch
+Bin/proguard/
+DosDev/
+Games/
+gpcp-JVM/
+J2meDev/
+Ofront/Arch/
 Ofront/.gitignore
-Rose
-Samurai
-Sdl
-Sym/Sdl.osf
-ZXDev/Bin/MakeZX
-ZXDev/Libs/include
+Rose/
+Samurai/
+Sdl/
+ZXDev/Bin/MakeZX/
 *.dll
 *.asm
 *.bin
@@ -17,6 +18,4 @@ ZXDev/Libs/include
 *.map
 *.noi
 *.rel
-Sdl/.git
-Sdl/+Git.bat
 +Git.bat
