DosDev/Bin: change 'config.cfg' to work without DOSBox by default.

--- a/DosDev/Bin/config.cfg
+++ b/DosDev/Bin/config.cfg
@@ -1,2 +1,2 @@
-SET DOSBox="C:\Program Files (x86)\DOSBox-0.74\DOSBox.exe"
+REM SET DOSBox="C:\Program Files (x86)\DOSBox-0.74\DOSBox.exe"
 SET DOSBoxOpt="-noconsole"
