--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ MsxDev/Lib/*.sym
 Ofront/Arch/
 Ofront/Bin/
 Ofront/Bin64/
+!Ofront/Code/*.ocf
+Ofront/Docu/
 Ofront/Lib/
 Ofront/Linux/
 Ofront/Mod/
@@ -22,6 +24,7 @@ Ofront/Sym/*.sym
 Ofront/Sym64/
 Ofront/Work/
 Ofront/.gitignore
+Ofront/*.bat
 Pdp11Dev/
 Sdl/
 ToDo/
