--- a/.gitignore
+++ b/.gitignore
@@ -34,14 +34,22 @@ WinDev/Bin/MinGW/
 WinDev/Bin/MinGW64/
 WinDev/Lib/Obj/*.o
 WinDev/Lib/Obj64/*.o
+WinDev/Obj/*.a
+WinDev/Obj/*.c
+WinDev/Obj/*.h
 WinDev/Obj/*.o
+WinDev/Obj64/*.a
+WinDev/Obj64/*.c
+WinDev/Obj64/*.h
 WinDev/Obj64/*.o
 ZXDev/Bin/MakeZX/
 ZXDev/Lib/Obj/*.sym
 ZXDev/Lib/Obj/zcc_opt.def
+ZXDev/Obj/*.c
 ZXDev/Obj/*.sym
 ZXDev/ToDo/
 *.dll
+*.exe
 *.asm
 *.bin
 *.ihx
