--- a/.gitignore
+++ b/.gitignore
@@ -7,29 +7,14 @@ DroSDK/
 Games/
 gpcp-JVM/
 JmeDev/
+K580Dev/
 MsxDev/Lib/*.sym
-Ofront/Arch/
-Ofront/Bin/
-Ofront/Bin64/
-!Ofront/Code/*.ocf
-Ofront/Docu/
-Ofront/Examples/
-Ofront/Lib/
-Ofront/Linux_arm/
-Ofront/Linux_x64/
-Ofront/Linux_x86/
-Ofront/Mod/
-Ofront/Obj/
-Ofront/Obj64/
-Ofront/Rsrc/Text/
-Ofront/Sym/*.sym
-Ofront/Sym64/
-Ofront/Work/
-Ofront/.gitignore
-Ofront/*.bat
+NesDev/
 Pdp11Dev/
+SegaDev/
 Sdl/
 ToDo/
+UkncDev/
 WinDev/Bin/MinGW/
 WinDev/Bin/MinGW64/
 WinDev/Lib/Obj/*.o
