--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,22 @@
 Bin/graphviz/
 Bin/proguard/
 DosDev/Obj/*.obj
-DosDev2/
+DosDev/
 DroNDK/
 DroSDK/
-Games/
+GBDev/
 gpcp-JVM/
 JmeDev/
 K580Dev/
-MsxDev/Lib/*.sym
+MsxDev/
 NesDev/
+Ofront/
 Pdp11Dev/
-SegaDev/
+SmdDev/
+SmsDev/
 Sdl/
 ToDo/
+TSConfDev/
 UkncDev/
 WinDev/Bin/MinGW/
 WinDev/Bin/MinGW64/
@@ -46,3 +49,4 @@ ZXDev/ToDo/
 *.noi
 *.rel
 *.sbm
+ZXDev3/
